source/stylesheets/screen.css.scss
@charset "utf-8";
@import 'normalize';
@import 'variables';
@import 'icon-font';
@import 'fonts';
// @import 'rtl'; // uncomment to switch to RTL format

/*
Copyright 2008-2013 Concur Technologies, Inc.
Licensed under the Apache License, Version 2.0 (the "License"); you may
not use this file except in compliance with the License. You may obtain
a copy of the License at
  http://www.apache.org/licenses/LICENSE-2.0
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
License for the specific language governing permissions and limitations
under the License.
*/

////////////////////////////////////////////////////////////////////////////////
// GENERAL STUFF
////////////////////////////////////////////////////////////////////////////////

html, body {
  color: $main-text;
  padding: 0;
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  @extend %default-font;
  background-color: $main-bg;
  height: 100%;
  -webkit-text-size-adjust: none; /* Never autoresize text */
}

////////////////////////////////////////////////////////////////////////////////
// TABLE OF CONTENTS
////////////////////////////////////////////////////////////////////////////////

#toc > ul > li > a > span {
  float: right;
  background-color: #2484FF;
  border-radius: 40px;
  width: 20px;
}

.toc-wrapper {
  transition: left 0.3s ease-in-out;

  overflow-y: auto;
  overflow-x: hidden;
  position: fixed;
  z-index: 30;
  top: 0;
  left: 0;
  bottom: 0;
  width: $nav-width;
  background-color: $nav-bg;
  font-size: 14px;
  border-right: 1px solid $nav-subitem-bg;

  // language selector for mobile devices
  .lang-selector {
    display: none;
    a {
      padding-top: 0.5em;
      padding-bottom: 0.5em;
    }
  }

  // This is the logo at the top of the ToC
  &>img {
    display: block;
    max-width: 100%;
    height: auto;
  }

  &>.search {
    position: relative;
    margin: 18px 0;

    input {
      background: $nav-bg;
      border-width: 0 0 1px 0;
      border-color: $search-box-border-color;
      padding: 6px 0 6px 20px;
      box-sizing: border-box;
      margin: $nav-v-padding $nav-padding;
      width: $nav-width - 30;
      outline: none;
      color: $nav-text;
      border-radius: 0; /* ios has a default border radius */
    }

    &:before {
      position: absolute;
      top: 17px;
      left: $nav-padding;
      color: $nav-text;
      @extend %icon-search;
    }
  }

  .logo {
    margin-bottom: $logo-margin;
    display: block;
    text-align: center;
    border-bottom: 1px solid #CCCCCC;

    &:hover {
      svg{
        fill: #f224f2;
        }
      }
    }

  .search-results {
    margin-top: 0;
    box-sizing: border-box;
    height: 0;
    font-size: 14px;
    overflow-y: auto;
    overflow-x: hidden;
    transition-property: height, margin;
    transition-duration: 180ms;
    transition-timing-function: ease-in-out;
    background: $nav-subitem-bg;
    &.visible {
      height: 30%;
      margin-bottom: 1em;
    }

    li {
      margin: 1em $nav-padding;
      line-height: 1;
    }

    a {
      color: $nav-text;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }


  // The Table of Contents is composed of multiple nested
  // unordered lists.  These styles remove the default
  // styling of an unordered list because it is ugly.
  ul, li {
    list-style: none;
    margin: 0;
    padding: 0;
    line-height: 2em;
  }

  li {
    color: $nav-text;
    transition-property: background;
    transition-timing-function: linear;
    transition-duration: 200ms;
  }

  .toc-link {
    transition: border 300ms;
    border-left: 6px solid transparent;


    &:hover {
      color:#4d4d4d;
      border-color: #f891f8;
    }
  }

  // This is the currently selected ToC entry
  .toc-link.active {
    border-color: #F224F2;
  }

  // this is parent links of the currently selected ToC entry
  .toc-link.active-parent {
    background-color: $nav-active-bg;
    color: $nav-active-parent-text;
  }

  .toc-list-h1 {
    > li {
    }
  }

  .toc-list-h2 {
    display: none;
    background-color: $nav-subitem-bg;
    font-weight: 500;
  }

  .toc-h2 {
    padding-left: 30px;
    font-size: 14px;
  }

  .toc-footer {
    padding: 1em 0;
    margin-top: 1em;
    border-top: 1px dashed $nav-footer-border-color;

    li,a {
      color: $nav-text;
      text-decoration: none;
    }

    a:hover {
      text-decoration: underline;
    }

    li {
      font-size: 0.8em;
      line-height: 1.7;
      text-decoration: none;
    }
  }
}

.toc-link, .toc-footer li {
  padding: 0 $nav-padding 0 $nav-padding;
  display: block;
  overflow-x: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  text-decoration: none;
  color: $nav-text;
  transition-property: background;
  transition-timing-function: linear;
  transition-duration: 130ms;
}

// button to show navigation on mobile devices
#nav-button {
  span {
    display: block;
    $side-pad: $main-padding / 2 - 8px;
    padding: 3px 6px;
    background-color: rgba($main-bg, 0.7);
    transition: 300ms background-color;
    transform-origin: 0 0;
    transform: rotate(-90deg) translate(-100%, 0);
    border-radius: 0 0 0 5px;
  }
  padding: 0 1.5em 5em 0; // increase touch size area
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 100;
  color: #000;
  text-decoration: none;
  font-weight: bold;
  opacity: 0.7;
  line-height: 16px;
  img {
    height: 16px;
    vertical-align: bottom;
    width: auto;
  }

  transition: left 0.3s ease-in-out;

  &:hover {
    opacity: 1;
    span{
      background-color: #F891F8;
    }
   }
  &.open {left: $nav-width}
}
/* ... */

